--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tailwindcss/vite": "^4.1.10",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
+    "postcss": "^8.5.5",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
@@ -26,6 +29,7 @@
     "react-tabs": "^6.1.0",
     "recharts": "^2.15.1",
     "styled-components": "^6.1.15",
+    "tailwindcss": "^4.1.10",
     "twilio": "^5.5.0"
   },
   "devDependencies": {
